--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, intial- scale=1.0">
      <title>New Repo</title>
+     <link rel="Stylesheet" href="Style.css">
 </head>
 
 <body>
